fix arm64 build issue which ruined by x64 setup

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -16,10 +16,12 @@ COPY --from=builder /app/package*.json ./
 COPY --from=builder /app/dist ./dist
 COPY --from=builder /app/src ./src
 COPY backend/docker-entrypoint.sh ./docker-entrypoint.sh
-RUN chmod +x ./docker-entrypoint.sh
+
+RUN sed -i 's/\r$//' ./docker-entrypoint.sh && \
+    chmod +x ./docker-entrypoint.sh
 
 # Install only production deps
 RUN npm ci --only=production
 
 EXPOSE 4000
-ENTRYPOINT ["/app/docker-entrypoint.sh"]
+ENTRYPOINT ["sh", "/app/docker-entrypoint.sh"]
